--- a/unpackaged/main/default/translations/cs.translation-meta.xml
+++ b/unpackaged/main/default/translations/cs.translation-meta.xml
@@ -113,6 +113,10 @@
         <name>LABS_ContactPointType_Phone</name>
     </customLabels>
     <customLabels>
+        <label><!-- LABS_Field_PersonEmail --></label>
+        <name>LABS_Field_PersonEmail</name>
+    </customLabels>
+    <customLabels>
         <label><!-- LABS_Messaging --></label>
         <name>LABS_Messaging</name>
     </customLabels>
